# korelin

./: .gitignore  CMakeLists.txt  README.md  README.zh.md  SPONSORS.md  array_test.kri  exception_test_fixed.kri  gc_test.kri  repro.kri  struct_test.kri
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
kembed/: comeonjit.c  comeonjit.h  kapi.c  kapi.h  kcache.c  kcache.h  kcode.c  kconst.h  keditor.c  keditor.h  kembed.c  kembed.h  kgc.c  kgc.h  klex.c  klex.h  kparser.h  kstd.c  kvm.c
src/: comeonjit.c  comeonjit.h  kapi.c  kapi.h  kcache.c  kcache.h  kcode.c  kcode.h  kconst.h  keditor.c  keditor.h  kgc.c  kgc.h  klex.c  klex.h  korelin.c  kparser.c  kparser.h  kstd.c  kstd.h  kvm.c  kvm.h
